panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__linkage__test_error_multiple_definitions_of_external_global_variable.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/linkage/test_error_multiple_definitions_of_external_global_variable/first_definition.c
    - panko/tests/cases/execute/linkage/test_error_multiple_definitions_of_external_global_variable/main.c
    - panko/tests/cases/execute/linkage/test_error_multiple_definitions_of_external_global_variable/second_definition.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/linkage/test_error_multiple_definitions_of_external_global_variable/first_definition.c"
   (definition external (x~0 `int` (static x)) (42 `int`)))
(translation-unit "panko/tests/cases/execute/linkage/test_error_multiple_definitions_of_external_global_variable/main.c"
   (declaration external (x~0 `int` (static x)) ∅)
   (function-definition external stack-size=8
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (return (x~0 `int` (static x))))))
(translation-unit "panko/tests/cases/execute/linkage/test_error_multiple_definitions_of_external_global_variable/second_definition.c"
   (definition external (x~0 `int` (static x)) (27 `int`)))

----- stderr -----
