panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__linkage__test_redeclare_static_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/linkage/test_redeclare_static_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/linkage/test_redeclare_static_function.c"
   (declaration internal (f~0 `fn() -> int` (static f)) ∅)
   (declaration internal (f~0 `fn() -> int` (static f)) ∅)
   (function-definition external stack-size=24
      (main~2 `fn() -> int` (static main))
      (compound-statement
         (return
            (call `int` @0
               (addressof `ptr<fn() -> int>` @8
                  (f~0 `fn() -> int` (static f)))))))
   (function-definition internal stack-size=24
      (f~0 `fn() -> int` (static f))
      (compound-statement
         (return (42 `int` @0)))))

----- stderr -----
