panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__linkage__test_redeclare_static_function_without_static.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/linkage/test_redeclare_static_function_without_static.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/linkage/test_redeclare_static_function_without_static.c"
   (declaration internal (f~0 `fn() -> int` (static f)) ∅)
   (declaration internal (f~0 `fn() -> int` (static f)) ∅)
   (declaration internal (g~2 `fn() -> int` (static g)) ∅)
   (declaration internal (g~2 `fn() -> int` (static g)) ∅)
   (function-definition external stack-size=40
      (main~4 `fn() -> int` (static main))
      (compound-statement
         (return
            (add `int` @0
               (call `int` @0
                  (addressof `ptr<fn() -> int>` @8
                     (f~0 `fn() -> int` (static f))))
               (call `int` @16
                  (addressof `ptr<fn() -> int>` @24
                     (g~2 `fn() -> int` (static g))))))))
   (function-definition internal stack-size=24
      (f~0 `fn() -> int` (static f))
      (compound-statement
         (return (42 `int` @0))))
   (function-definition internal stack-size=24
      (g~2 `fn() -> int` (static g))
      (compound-statement
         (return (7 `int` @0)))))

----- stderr -----
